Created first draft of the Plant Information GUI. Enabled switching scenes from library to the plant.

--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -37,7 +37,7 @@
             <Font size="6.0" />
          </font>
       </Button>
-      <Button layoutX="74.0" layoutY="141.0" mnemonicParsing="false" prefHeight="14.0" prefWidth="55.0" text="Turn to Widget">
+      <Button fx:id="selectPlantButton" layoutX="74.0" layoutY="141.0" mnemonicParsing="false" onAction="#selectPlant" prefHeight="14.0" prefWidth="55.0" text="Select Plant">
          <font>
             <Font size="6.0" />
          </font>
