Fixade buggen med att den inte visade "choose seed menu" har också lag till extra funktionallitet till den nmynen

--- a/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
+++ b/src/main/resources/com/example/plantwidget_g18_gui/cssSheets.css
@@ -144,3 +144,15 @@
 -fx-background-color : #34a8d9;
 -fx-background-radius : 0 0 0 0;
 }
+
+.backgroundColor{
+    -fx-background-color: #92eaa9;
+}
+
+.backgroundColor:hover{
+    -fx-background-color: #82cf95;
+}
+
+.backgroundColor:pressed{
+    -fx-background-color: #92eaa9;
+}
