--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -50,7 +50,7 @@
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
-      <Button layoutX="489.0" layoutY="300.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" styleClass="button1" stylesheets="@cssSheets.css" text="+ New Seed" textOverrun="CLIP">
+      <Button fx:id="plantNewSeedButton" layoutX="489.0" layoutY="300.0" mnemonicParsing="false" onAction="#goTochooseSeedScene" prefHeight="25.0" prefWidth="111.0" styleClass="button1" stylesheets="@cssSheets.css" text="+ New Seed" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
                <color>
