Created Settings Scene and a settings button in Library.

--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -73,4 +74,7 @@
       </Button>
 
    </children>
+   <effect>
+      <Glow />
+   </effect>
 </AnchorPane>
