--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -46,7 +46,7 @@
             <Font size="11.0" />
          </font>
       </Button>
-      <TextField fx:id="levelPlantOne" editable="false" layoutX="43.0" layoutY="13.0" prefHeight="2.0" prefWidth="88.0" promptText="Level" style="-fx-background-color: #80cd93;" text="Level X">
+      <TextField fx:id="levelPlantOne" editable="false" layoutX="43.0" layoutY="13.0" prefHeight="2.0" prefWidth="88.0" promptText="Level" style="-fx-background-color: #80cd93;" styleClass="textFieldGreen" text="Level X">
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
