--- a/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/hello-view.fxml
@@ -36,7 +36,8 @@
       <ImageView fx:id="imagePlantSix" fitHeight="88.0" fitWidth="111.0" layoutX="318.0" layoutY="246.0" pickOnBounds="true" preserveRatio="true" />
       <ProgressBar fx:id="plantWaterBarOne" layoutX="19.0" layoutY="125.0" prefHeight="14.0" prefWidth="143.0" progress="0.78" />
       <ProgressBar fx:id="plantHealthBarOne" layoutX="19.0" layoutY="139.0" prefHeight="14.0" prefWidth="143.0" progress="0.53" styleClass="progressBarHealth" stylesheets="@cssSheets.css" />
-      <Button fx:id="waterThePlantOne" layoutX="15.0" layoutY="159.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="25.0" prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant">
+      <Button fx:id="waterThePlantOne" layoutX="15.0" layoutY="159.0" mnemonicParsing="false" onAction="#waterPlantOne" prefHeight="25.0"
+              prefWidth="74.0" styleClass="buttonWater" stylesheets="@cssSheets.css" text="Water Plant">
          <font>
             <Font size="11.0" />
          </font>
@@ -46,7 +47,8 @@
             <Font size="11.0" />
          </font>
       </Button>
-      <TextField fx:id="levelPlantOne" editable="false" layoutX="43.0" layoutY="13.0" prefHeight="2.0" prefWidth="88.0" promptText="Level" style="-fx-background-color: #80cd93;" styleClass="textFieldGreen" text="Level X">
+      <TextField fx:id="levelPlantOne" editable="false" layoutX="43.0" layoutY="13.0" prefHeight="2.0" prefWidth="88.0"
+                 promptText="Level" style="-fx-background-color: #80cd93;" styleClass="textFieldGreen" text="Level X">
          <opaqueInsets>
             <Insets />
          </opaqueInsets></TextField>
@@ -86,7 +88,8 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="exitButton1" layoutX="570.0" layoutY="2.0" mnemonicParsing="false" onAction="#closeProgram" prefHeight="15.0" prefWidth="33.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textOverrun="CLIP">
+      <Button fx:id="exitButton1" layoutX="570.0" layoutY="2.0" mnemonicParsing="false" onAction="#closeProgram" prefHeight="15.0"
+              prefWidth="33.0" styleClass="buttonExit" stylesheets="@cssSheets.css" text="X" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
                <color>
@@ -98,7 +101,8 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="settingsButton" layoutX="489.0" layoutY="334.0" mnemonicParsing="false" onAction="#goToSettings" prefHeight="25.0" prefWidth="111.0" styleClass="buttonSettings" stylesheets="@cssSheets.css" text="Settings" textOverrun="CLIP">
+      <Button fx:id="settingsButton" layoutX="489.0" layoutY="334.0" mnemonicParsing="false" onAction="#goToSettings"
+              prefHeight="25.0" prefWidth="111.0" styleClass="buttonSettings" stylesheets="@cssSheets.css" text="Settings" textOverrun="CLIP">
          <effect>
             <DropShadow blurType="GAUSSIAN">
                <color>
