--- a/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/PlantInfoGUI.fxml
@@ -32,7 +32,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="skipHourButton" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipHour" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE">
+      <Button fx:id="skipDayButton1" layoutX="498.0" layoutY="406.0" mnemonicParsing="false" onAction="#skipDay1" prefHeight="38.0" prefWidth="137.0" styleClass="buttonSkipDay" stylesheets="@cssSheets.css" text="Skip day" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
