--- a/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
@@ -6,7 +6,6 @@
 <?import java.lang.String?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,13 +25,11 @@
             <Glow />
          </effect>
       </Pane>
-      <ProgressBar fx:id="plantHealthBarOne" layoutX="580.0" layoutY="220.0" />
       <Label layoutX="154.0" layoutY="26.0" text="Settings" textFill="WHITE">
          <font>
             <Font name="Neo Sans" size="32.0" />
          </font>
       </Label>
-      <TextField fx:id="levelPlantOne" layoutX="505.0" layoutY="138.0" />
       <VBox layoutX="45.0" layoutY="95.0" prefHeight="245.0" prefWidth="332.0">
          <children>
             <JFXToggleButton text="Light/Dark Theme" toggleColor="#393b3c" toggleLineColor="#101011" unToggleColor="#2185ff" unToggleLineColor="#569ff2">
@@ -66,6 +63,8 @@
             <Font size="14.0" />
          </font>
       </MFXButton>
+      <ProgressBar fx:id="plantWaterBarOne" disable="true" layoutX="490.0" layoutY="222.0" prefHeight="23.0" prefWidth="175.0" progress="0.78" />
+      <ProgressBar fx:id="plantHealthBarOne" disable="true" layoutX="489.0" layoutY="284.0" prefHeight="23.0" prefWidth="175.0" progress="0.53" />
    </children>
    <effect>
       <DropShadow />
