--- a/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
+++ b/src/main/resources/com/example/plantwidget_g18_gui/SettingsGUI.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.paint.Color?>
@@ -53,12 +55,12 @@
                   <Font name="Nirmala UI Bold" size="15.0" />
                </font>
             </Label>
-            <JFXToggleNode layoutX="14.0" layoutY="64.0" prefHeight="25.0" prefWidth="52.0">
+            <JFXToggleNode layoutX="9.0" layoutY="48.0" prefHeight="47.0" prefWidth="44.0" styleClass="elementToggle" stylesheets="@cssSheets.css">
                <selectedColor>
-                  <Color red="0.15442252159118652" green="0.17517970502376556" blue="0.19736842811107635" />
+                  <Color red="0.1500999927520752" green="0.16938500106334686" blue="0.1899999976158142" opacity="0.0" />
                </selectedColor>
                <unSelectedColor>
-                  <Color red="0.975344181060791" green="0.9868420958518982" blue="0.2969663739204407" />
+                  <Color red="0.9800000190734863" green="0.9800000190734863" blue="0.30379998683929443" />
                </unSelectedColor>
                <cursor>
                   <Cursor fx:constant="NONE" />
@@ -72,6 +74,11 @@
                   <Font name="Nirmala UI Bold" size="15.0" />
                </font>
             </Label>
+            <ImageView disable="true" fitHeight="80.0" fitWidth="52.0" layoutX="8.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/settingsBulb.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Label layoutX="115.0" layoutY="14.0" text="Settings" textFill="#61523a">
